--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,10 +1,59 @@
 /* Base */
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 
 /* Components */
-/*@import 'components/button';
-@import 'components/form';*/
+@import 'components/form.css';
 
 /* Utilities */
-@import 'tailwindcss/utilities';
+ * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  :root {
+    --white: #fff;
+    --background: #f2f3f5;
+    --gray-line: #dcdde0;
+    --text: #666666;
+    --text-highlight: #b3b9ff;
+    --title: #2e384d;
+    --red: #e83f5b;
+    --green: #4cd62b;
+    --blue: #5965e0;
+    --blue-dark: #4953b8;
+    --blue-twitter: #2aa9e0;
+  }
+
+  @media(max-width: 1000px) {
+    html {
+      font-size: 93.75%;
+    }
+  }
+
+  @media(max-width: 720px) {
+    html {
+      font-size: 87.5%;
+    }
+  }
+
+  body {
+    background: var(--background);
+    color: var(--text);
+  }
+
+  body, button, input, textarea {
+    font: 400 1em "Inter", sans-serif;
+  }
+
+  button {
+    cursor: pointer;
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
