--- a/public/css/app.css
+++ b/public/css/app.css
@@ -26729,6 +26729,11 @@ video {
   --title: #2e384d;
   --red: #e83f5b;
   --green: #4cd62b;
+  --light-gray: #cbd5e0;
+  --dark-gray:#4a5568;
+  --light-indigo:#a3bffa;
+  --medium-indigo:#4c51bf;
+  --dark-indigo:#3c366b;
   --blue: #5965e0;
   --blue-dark: #4953b8;
   --blue-twitter: #2aa9e0;
