--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -23,9 +23,15 @@
     --title: #2e384d;
     --red: #e83f5b;
     --green: #4cd62b;
+    --light-gray: #cbd5e0;
+    --dark-gray:#4a5568;
+    --light-indigo:#a3bffa;
+    --medium-indigo:#4c51bf;
+    --dark-indigo:#3c366b;
     --blue: #5965e0;
     --blue-dark: #4953b8;
     --blue-twitter: #2aa9e0;
+
   }
 
   @media(max-width: 1000px) {
